Add users to group and set WindowStation and Desktop permission for group

--- a/IronFoundry.Warden.Service/App.config
+++ b/IronFoundry.Warden.Service/App.config
@@ -5,7 +5,7 @@
     <section name="warden-server" type="IronFoundry.Warden.Configuration.WardenSection, IronFoundry.Warden" />
   </configSections>
   
-  <warden-server container-basepath="C:\IronFoundry\warden\containers" tcp-port="4444" />
+  <warden-server container-basepath="C:\IronFoundry\warden\containers" tcp-port="4444" warden-users-group="WardenUsers" />
   
   <!-- <nlog throwExceptions="true" internalLogToConsole="true" internalLogLevel="Debug" -->
   <nlog throwExceptions="true" async="false" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
