Adding messages for copying files in/out of a container and extracting tar archives inside the container.

--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -62,10 +62,12 @@
     <Compile Include="Containers\Messages\ContainerInfoMessage.cs" />
     <Compile Include="Containers\Messages\ContainerInitializeMessage.cs" />
     <Compile Include="Containers\Messages\ContainerStateMessage.cs" />
+    <Compile Include="Containers\Messages\CopyFileMessage.cs" />
     <Compile Include="Containers\Messages\CopyMessage.cs" />
     <Compile Include="Containers\Messages\CreateProcessMessage.cs" />
     <Compile Include="Containers\Messages\CreateProcessStartInfo.cs" />
     <Compile Include="Containers\Messages\EnableLoggingMessage.cs" />
+    <Compile Include="Containers\Messages\ExtractTarFileMessage.cs" />
     <Compile Include="Containers\Messages\LimitMemoryMessage.cs" />
     <Compile Include="Containers\Messages\LogEvent.cs" />
     <Compile Include="Containers\Messages\ReservePortMessage.cs" />
