--- a/IronFoundry.Warden.Test/packages.config
+++ b/IronFoundry.Warden.Test/packages.config
@@ -4,6 +4,7 @@
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.7.1.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="xunit" version="2.0.0-alpha-build2576" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0-alpha-build2576" targetFramework="net45" />
   <package id="xunit.assert" version="2.0.0-alpha-build2576" targetFramework="net45" />
