--- a/IronFoundry.Warden.Service/App.config
+++ b/IronFoundry.Warden.Service/App.config
@@ -32,6 +32,12 @@
         <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.122.0" newVersion="3.1.122.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity   name="Newtonsoft.Json"
+                              publicKeyToken="30ad4fe6b2a6aeed"
+                              culture="neutral" />
+        <bindingRedirect oldVersion="4.5.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
