--- a/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
+++ b/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CB7BA555-21FD-4C57-A629-A925B6A83A31}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IronFoundry.Warden.Shared</RootNamespace>
-    <AssemblyName>IronFoundry.Warden.Shared</AssemblyName>
+    <RootNamespace>IronFoundry.Container</RootNamespace>
+    <AssemblyName>IronFoundry.Container.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,7 +50,6 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Concurrency\AsyncLock.cs" />
-    <Compile Include="Data\ProcessStats.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Messaging\JsonRpcRequest.cs" />
     <Compile Include="Messaging\JsonRpcResponse.cs" />
