Add default environment to ConstrainedProcessRunner. Move tests to IronFoundry.Container.Test

--- a/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
+++ b/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BindMount.cs" />
     <Compile Include="Concurrency\AsyncLock.cs" />
     <Compile Include="ContainerHandleGenerator.cs" />
+    <Compile Include="EnvironmentBlock.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="FileSystemManager.cs" />
     <Compile Include="Guard.cs" />
