Add support to Container Host for stopping/killing processes. Implement more Container Destroy functionality.

--- a/IronFoundry.Container.Host/IronFoundry.Container.Host.csproj
+++ b/IronFoundry.Container.Host/IronFoundry.Container.Host.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Handlers\CreateProcessHandler.cs" />
     <Compile Include="Handlers\PingHandler.cs" />
+    <Compile Include="Handlers\StopAllProcessesHandler.cs" />
     <Compile Include="Handlers\WaitForProcessExitHandler.cs" />
     <Compile Include="ProcessTracker.cs" />
     <Compile Include="Program.cs" />
