--- a/IronFoundry.Container.TestHelper/IronFoundry.Container.TestHelper.csproj
+++ b/IronFoundry.Container.TestHelper/IronFoundry.Container.TestHelper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AB96DA85-8C4E-490B-B552-3FE9F0E0E9BF}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IronFoundry.Warden.TestHelper</RootNamespace>
+    <RootNamespace>IronFoundry.Container.TestHelper</RootNamespace>
     <AssemblyName>IFTestHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
