--- a/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
+++ b/IronFoundry.Warden.Test/IronFoundry.Warden.Test.csproj
@@ -89,9 +89,9 @@
       <Project>{cb7ba555-21fd-4c57-a629-a925b6a83a31}</Project>
       <Name>IronFoundry.Container.Shared</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IronFoundry.Warden.TestHelper\IronFoundry.Warden.TestHelper.csproj">
+    <ProjectReference Include="..\IronFoundry.Container.TestHelper\IronFoundry.Container.TestHelper.csproj">
       <Project>{ab96da85-8c4e-490b-b552-3fe9f0e0e9bf}</Project>
-      <Name>IronFoundry.Warden.TestHelper</Name>
+      <Name>IronFoundry.Container.TestHelper</Name>
     </ProjectReference>
     <ProjectReference Include="..\IronFoundry.Warden\IronFoundry.Warden.csproj">
       <Project>{cc1c255a-a120-4d7f-b40f-c4cb3cdb193b}</Project>
