--- a/IronFoundry.Container/IronFoundry.Container.csproj
+++ b/IronFoundry.Container/IronFoundry.Container.csproj
@@ -63,7 +63,7 @@
     <Compile Include="ContainerHostClient.cs" />
     <Compile Include="ContainerHostDependencyHelper.cs" />
     <Compile Include="ContainerUser.cs" />
-    <Compile Include="IContainerHostService.cs" />
+    <Compile Include="ContainerHostService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
