Add library for computing effective file access for a user.

--- a/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
+++ b/IronFoundry.Container.Shared/IronFoundry.Container.Shared.csproj
@@ -61,12 +61,15 @@
     <Compile Include="BindMount.cs" />
     <Compile Include="Concurrency\AsyncLock.cs" />
     <Compile Include="ContainerHandleHelper.cs" />
+    <Compile Include="Utilities\EffectiveAccessComputer.cs" />
     <Compile Include="Utilities\EnvironmentBlock.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Utilities\FileSystemEffectiveAccessComputer.cs" />
     <Compile Include="Utilities\FileSystemManager.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="IContainerDirectory.cs" />
     <Compile Include="IContainerUser.cs" />
+    <Compile Include="Utilities\FileSystemSecurityDescriptorReader.cs" />
     <Compile Include="Utilities\ILocalTcpPortManager.cs" />
     <Compile Include="ContainerProcess.cs" />
     <Compile Include="Utilities\JobObjectLimits.cs" />
@@ -88,6 +91,8 @@
     <Compile Include="Utilities\NetShRunner.cs" />
     <Compile Include="Utilities\WindowStationSecurity.cs" />
     <Compile Include="WardenException.cs" />
+    <Compile Include="Win32\AccessCheck.cs" />
+    <Compile Include="Win32\AccessMask.cs" />
     <Compile Include="Win32\DesktopRights.cs" />
     <Compile Include="Win32\DesktopSecurity.cs" />
     <Compile Include="Win32\DuplicateTokenEx.cs" />
@@ -110,11 +115,16 @@
     <Compile Include="Win32\JobObject.cs" />
     <Compile Include="Win32\LocalPrincipalData.cs" />
     <Compile Include="Win32\LogonUser.cs" />
+    <Compile Include="Win32\NativeDll.cs" />
     <Compile Include="Win32\NativeMethods.cs" />
     <Compile Include="Win32\RevertToSelf.cs" />
+    <Compile Include="Win32\SafeAuthzContextHandle.cs" />
+    <Compile Include="Win32\SafeAuthzRMHandle.cs" />
+    <Compile Include="Win32\SafeHGlobal.cs" />
     <Compile Include="Win32\SafeUserTokenHandle.cs" />
     <Compile Include="Win32\SecurityAttributes.cs" />
     <Compile Include="Win32\StandardRights.cs" />
+    <Compile Include="Utilities\UndoStack.cs" />
     <Compile Include="Win32\Utils.cs" />
     <Compile Include="Utilities\ProcessDataReceivedEventArgs.cs" />
     <Compile Include="Utilities\ProcessHelper.cs" />
@@ -137,7 +147,7 @@
     </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
