--- a/IronFoundry.Container/IronFoundry.Container.nuspec
+++ b/IronFoundry.Container/IronFoundry.Container.nuspec
@@ -18,14 +18,15 @@
     </dependencies>
 
     <references>
-      <reference file="IronFoundry.Warden.Shared.dll" />
-      <reference file="IronFoundry.Warden.ContainerHost.exe" />
+      <reference file="IronFoundry.Container.dll" />
+      <reference file="IronFoundry.Container.Shared.dll" />
+      <reference file="IronFoundry.Container.Host.exe" />
     </references>
   </metadata>
 
   <files>
-    <file src="bin\$configuration$\IronFoundry.Warden.Shared.dll" target="lib\net45" />
-    <file src="bin\$configuration$\IronFoundry.Warden.ContainerHost.exe" target="lib\net45" />
+    <file src="bin\$configuration$\IronFoundry.Container.Shared.dll" target="lib\net45" />
+    <file src="bin\$configuration$\IronFoundry.Container.Host.exe" target="lib\net45" />
   </files>
 
 </package>
