--- a/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
+++ b/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Acceptance\ContainerTests.cs" />
     <Compile Include="ConstrainedProcessRunnerTests.cs" />
     <Compile Include="ConstrainedProcessTests.cs" />
-    <Compile Include="ContainerCreationServiceTests.cs" />
+    <Compile Include="ContainerServiceTests.cs" />
     <Compile Include="ContainerDirectoryTests.cs" />
     <Compile Include="ContainerHandleHelperTests.cs" />
     <Compile Include="ContainerHostClientTests.cs" />
