--- a/IronFoundry.Container/IronFoundry.Container.csproj
+++ b/IronFoundry.Container/IronFoundry.Container.csproj
@@ -59,7 +59,7 @@
     <Compile Include="ConstrainedProcess.cs" />
     <Compile Include="ConstrainedProcessRunner.cs" />
     <Compile Include="Container.cs" />
-    <Compile Include="ContainerCreationService.cs" />
+    <Compile Include="ContainerService.cs" />
     <Compile Include="ContainerHostClient.cs" />
     <Compile Include="ContainerHostDependencyHelper.cs" />
     <Compile Include="ContainerUser.cs" />
