--- a/IronFoundry.Warden.Test/packages.config
+++ b/IronFoundry.Warden.Test/packages.config
@@ -6,8 +6,10 @@
   <package id="NSubstitute" version="1.7.1.0" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-beta5-build2785" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-beta5-build2785" targetFramework="net45" />
+  <package id="xunit" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.assert" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.core" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.0.0-rc1-build2826" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0-rc1-build1030" targetFramework="net45" />
 </packages>
