--- a/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
+++ b/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
@@ -109,6 +109,7 @@
     <Compile Include="ProcessTrackerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\UndoStackTests.cs" />
+    <Compile Include="Win32\SafeAllocationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
