Add support for storing persistent properties in containers.

--- a/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
+++ b/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ContainerTests.cs" />
     <Compile Include="ContainerUserTests.cs" />
     <Compile Include="Handlers\StopProcessHandlerTests.cs" />
+    <Compile Include="Internal\LocalFilePropertyServiceTests.cs" />
     <Compile Include="Messaging\MessageDispatcherTest.cs" />
     <Compile Include="Messaging\MessageTransportTest.cs" />
     <Compile Include="Messaging\MessagingClientTest.cs" />
