--- a/IronFoundry.Container.Host/App.config
+++ b/IronFoundry.Container.Host/App.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+  </configSections>
+
+  <!-- <nlog throwExceptions="true" internalLogToConsole="true" internalLogLevel="Debug" -->
+  <nlog throwExceptions="true" async="false" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="console" xsi:type="Console" layout="${longdate}|${level:uppercase=true}|${threadid}|${logger:shortName=true}|${message}${onexception:|${exception:format=message,stacktrace:maxInnerExceptionLevel=10:innerFormat=message,stacktrace}}" />
+
+      <target name="file" xsi:type="File" layout="${longdate}|${level:uppercase=true}|${threadid}|${logger:shortName=true}|${message}${onexception:|${exception:format=message,stacktrace:maxInnerExceptionLevel=10:innerFormat=message,stacktrace}}" fileName="logs\hostlog.txt" archiveFileName="logs\hostlog-{#}.txt" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" keepFileOpen="false" />
+    </targets>
+    <rules>
+      <!-- Use the following to log to the console -->
+      <!-- <logger name="*" minlevel="Trace" writeTo="console, file" /> -->
+      <logger name="*" minlevel="Trace" writeTo="file" />
+    </rules>
+  </nlog>
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
