--- a/IronFoundry.Warden/IronFoundry.Warden.csproj
+++ b/IronFoundry.Warden/IronFoundry.Warden.csproj
@@ -46,30 +46,17 @@
     <Compile Include="Containers\ContainerHandle.cs" />
     <Compile Include="Containers\ContainerLogEmitter.cs" />
     <Compile Include="Containers\ContainerManager.cs" />
-    <Compile Include="Containers\ContainerProxy.cs" />
     <Compile Include="Containers\ContainerResourceHolder.cs" />
-    <Compile Include="Containers\ContainerStub.cs" />
     <Compile Include="Containers\ContainerUser.cs" />
-    <Compile Include="Containers\IContainer.cs" />
     <Compile Include="Containers\IContainerClient.cs" />
     <Compile Include="Containers\IContainerHostLauncher.cs" />
     <Compile Include="Containers\IContainerJanitor.cs" />
     <Compile Include="Containers\IContainerManager.cs" />
     <Compile Include="Containers\ContainerHostLauncher.cs" />
-    <Compile Include="Containers\Messages\BindMountMessage.cs" />
-    <Compile Include="Containers\Messages\ContainerInfoMessage.cs" />
-    <Compile Include="Containers\Messages\ContainerInitializeMessage.cs" />
-    <Compile Include="Containers\Messages\ContainerStateMessage.cs" />
-    <Compile Include="Containers\Messages\CopyFileMessage.cs" />
-    <Compile Include="Containers\Messages\CopyMessage.cs" />
-    <Compile Include="Containers\Messages\CreateProcessStartInfo.cs" />
-    <Compile Include="Containers\Messages\EnableLoggingMessage.cs" />
-    <Compile Include="Containers\Messages\LimitMemoryMessage.cs" />
     <Compile Include="Containers\Messages\LogEvent.cs" />
-    <Compile Include="Containers\Messages\ReservePortMessage.cs" />
-    <Compile Include="Containers\Messages\RunCommandMessage.cs" />
     <Compile Include="Containers\Messages\StopMessage.cs" />
     <Compile Include="Containers\ProcessMonitor.cs" />
+    <Compile Include="Containers\ContainerClient.cs" />
     <Compile Include="Handlers\LoggingRequestHandler.cs" />
     <Compile Include="PInvoke\IoCompletionPort.cs" />
     <Compile Include="Handlers\ContainerRequestHandler.cs" />
@@ -111,9 +98,17 @@
     <Compile Include="PInvoke\GetThreadDesktop.cs" />
     <Compile Include="PInvoke\NativeMethods.cs" />
     <Compile Include="Tasks\CommandResult.cs" />
-    <Compile Include="Tasks\CommandRunner.cs" />
-    <Compile Include="Tasks\ICommandRunner.cs" />
+    <Compile Include="Tasks\ExeCommand.cs" />
+    <Compile Include="Tasks\MkDirCommand.cs" />
+    <Compile Include="Tasks\PathCommand.cs" />
+    <Compile Include="Tasks\PowerShellCommand.cs" />
+    <Compile Include="Tasks\ProcessCommand.cs" />
+    <Compile Include="Tasks\RemoteCommandArgs.cs" />
     <Compile Include="Tasks\RemoteCommand.cs" />
+    <Compile Include="Tasks\ReplaceTokensCommand.cs" />
+    <Compile Include="Tasks\TarCommand.cs" />
+    <Compile Include="Tasks\TouchCommand.cs" />
+    <Compile Include="Tasks\UnzipCommand.cs" />
     <Compile Include="Utilities\ContainerExtensions.cs" />
     <Compile Include="Utilities\IFilePermissionManager.cs" />
     <Compile Include="Utilities\LoggedIEnumerableExtensionMethods.cs" />
@@ -127,19 +122,9 @@
     <Compile Include="Server\WardenExceptionHandler.cs" />
     <Compile Include="Server\MessageHandler.cs" />
     <Compile Include="Server\SocketExceptionHandler.cs" />
-    <Compile Include="Tasks\ExeCommand.cs" />
-    <Compile Include="Tasks\ReplaceTokensCommand.cs" />
-    <Compile Include="Tasks\ProcessCommand.cs" />
-    <Compile Include="Tasks\TarCommand.cs" />
     <Compile Include="Tasks\TaskCommandStatusEventArgs.cs" />
-    <Compile Include="Tasks\UnzipCommand.cs" />
-    <Compile Include="Tasks\PathCommand.cs" />
-    <Compile Include="Tasks\PowershellCommand.cs" />
-    <Compile Include="Tasks\TouchCommand.cs" />
     <Compile Include="Tasks\TaskCommandStatus.cs" />
-    <Compile Include="Tasks\MkdirCommand.cs" />
     <Compile Include="Tasks\TaskCommandDTO.cs" />
-    <Compile Include="Tasks\TaskCommand.cs" />
     <Compile Include="Tasks\TaskCommandResult.cs" />
     <Compile Include="Handlers\TaskRequestHandler.cs" />
     <Compile Include="Jobs\IJobManager.cs" />
@@ -155,7 +140,6 @@
     <Compile Include="Handlers\StopRequestHandler.cs" />
     <Compile Include="Handlers\StreamRequestHandler.cs" />
     <Compile Include="Server\TcpServer.cs" />
-    <Compile Include="Tasks\WebApplicationCommand.cs" />
     <Compile Include="Tasks\TaskRunner.cs" />
     <Compile Include="Utilities\MessageWriter.cs" />
     <Compile Include="Utilities\Statics.cs" />
