--- a/IronFoundry.Container/IronFoundry.Container.csproj
+++ b/IronFoundry.Container/IronFoundry.Container.csproj
@@ -65,7 +65,7 @@
     <Compile Include="ContainerUser.cs" />
     <Compile Include="ContainerHostService.cs" />
     <Compile Include="Internal\Clock.cs" />
-    <Compile Include="Internal\IContainerPropertyService.cs" />
+    <Compile Include="IContainerPropertyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\LocalFilePropertyService.cs" />
   </ItemGroup>
