Add extension method for retrying a func<bool> up to N times with sleeps in between.

--- a/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
+++ b/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
@@ -91,6 +91,7 @@
     <Compile Include="TestSupport\TestProcessIO.cs" />
     <Compile Include="Utilities\EffectiveAccessComputerTests.cs" />
     <Compile Include="Utilities\EnvironmentBlockTests.cs" />
+    <Compile Include="Utilities\ExtensionMethodsTests.cs" />
     <Compile Include="Utilities\FileSystemEffectiveAccessComputerTests.cs" />
     <Compile Include="Utilities\FileSystemManagerTests.cs" />
     <Compile Include="Handlers\CreateProcessHandlerTests.cs" />
