--- a/IronFoundry.Container/IronFoundry.Container.csproj
+++ b/IronFoundry.Container/IronFoundry.Container.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Utilities\LocalPrincipalData.cs" />
     <Compile Include="Utilities\LocalPrincipalManager.cs" />
     <Compile Include="Utilities\LocalTcpPortManager.cs" />
+    <Compile Include="Utilities\LocalUserGroupManager.cs" />
     <Compile Include="Utilities\NetShRunner.cs" />
     <Compile Include="Utilities\UndoStack.cs" />
     <Compile Include="Utilities\WindowStationSecurity.cs" />
