--- a/IronFoundry.Container/IronFoundry.Container.csproj
+++ b/IronFoundry.Container/IronFoundry.Container.csproj
@@ -57,25 +57,25 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="BindMount.cs" />
-    <Compile Include="Internal\ContainerHandleHelper.cs" />
+    <Compile Include="ContainerHandleHelper.cs" />
     <Compile Include="ContainerInfo.cs" />
     <Compile Include="IContainerProcess.cs" />
     <Compile Include="IContainerDirectory.cs" />
-    <Compile Include="Internal\ConstrainedProcess.cs" />
-    <Compile Include="Internal\ConstrainedProcessRunner.cs" />
+    <Compile Include="ConstrainedProcess.cs" />
+    <Compile Include="ConstrainedProcessRunner.cs" />
     <Compile Include="IContainer.cs" />
     <Compile Include="ContainerService.cs" />
-    <Compile Include="Internal\Container.cs" />
-    <Compile Include="Internal\ContainerDirectory.cs" />
-    <Compile Include="Internal\ContainerHostClient.cs" />
-    <Compile Include="Internal\ContainerHostDependencyHelper.cs" />
-    <Compile Include="Internal\ContainerHostService.cs" />
+    <Compile Include="Container.cs" />
+    <Compile Include="ContainerDirectory.cs" />
+    <Compile Include="ContainerHostClient.cs" />
+    <Compile Include="ContainerHostDependencyHelper.cs" />
+    <Compile Include="ContainerHostService.cs" />
     <Compile Include="Utilities\Clock.cs" />
-    <Compile Include="Internal\ContainerProcess.cs" />
-    <Compile Include="Internal\ContainerUser.cs" />
+    <Compile Include="ContainerProcess.cs" />
+    <Compile Include="ContainerUser.cs" />
     <Compile Include="ProcessSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Internal\LocalFilePropertyService.cs" />
+    <Compile Include="LocalFilePropertyService.cs" />
     <Compile Include="Utilities\DesktopPermissionManager.cs" />
     <Compile Include="Utilities\EffectiveAccessComputer.cs" />
     <Compile Include="Utilities\FileSystemEffectiveAccessComputer.cs" />
@@ -83,10 +83,10 @@
     <Compile Include="Utilities\FileSystemSecurityDescriptorReader.cs" />
     <Compile Include="Utilities\FirewallManager.cs" />
     <Compile Include="Utilities\IPUtilities.cs" />
-    <Compile Include="Utilities\LocalPrincipalData.cs" />
-    <Compile Include="Utilities\LocalPrincipalManager.cs" />
-    <Compile Include="Utilities\LocalTcpPortManager.cs" />
-    <Compile Include="Utilities\LocalUserGroupManager.cs" />
+    <Compile Include="LocalPrincipalData.cs" />
+    <Compile Include="LocalPrincipalManager.cs" />
+    <Compile Include="LocalTcpPortManager.cs" />
+    <Compile Include="LocalUserGroupManager.cs" />
     <Compile Include="Utilities\NetShRunner.cs" />
     <Compile Include="Utilities\UndoStack.cs" />
     <Compile Include="Utilities\WindowStationSecurity.cs" />
