--- a/IronFoundry.Container.Acceptance.Test/IronFoundry.Container.Acceptance.Test.csproj
+++ b/IronFoundry.Container.Acceptance.Test/IronFoundry.Container.Acceptance.Test.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\shared\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ContainerAcceptanceTests.cs" />
     <Compile Include="ContainerServiceAcceptanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
