--- a/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
+++ b/IronFoundry.Container.Test/IronFoundry.Container.Test.csproj
@@ -62,6 +62,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\shared\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ConstrainedProcessRunnerTests.cs" />
     <Compile Include="ConstrainedProcessTests.cs" />
     <Compile Include="ContainerServiceTests.cs" />
