--- a/IronFoundry.Container.TestHelper/IronFoundry.Container.TestHelper.csproj
+++ b/IronFoundry.Container.TestHelper/IronFoundry.Container.TestHelper.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\shared\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="PrimeSieve.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
