--- a/IronFoundry.Warden.IISHost/IronFoundry.Warden.IISHost.csproj
+++ b/IronFoundry.Warden.IISHost/IronFoundry.Warden.IISHost.csproj
@@ -54,7 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\shared\CommonAssemblyInfo.cs">
-      <Link>CommonAssemblyInfo.cs</Link>
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ConfigGenerator.cs" />
     <Compile Include="Constants.cs" />
