--- a/IronFoundry.Warden.Protocol/IronFoundry.Warden.Protocol.csproj
+++ b/IronFoundry.Warden.Protocol/IronFoundry.Warden.Protocol.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\shared\CommonAssemblyInfo.cs">
-      <Link>CommonAssemblyInfo.cs</Link>
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Constants.cs" />
     <Compile Include="IContainerRequest.cs" />
