Implement Container#FindProcessById
This is prerequisite to be able to kill a process in Containerizer

[#93382670]

Signed-off-by: John_Shahid <jvshahid@pivotal.io>

--- a/IronFrame.Shared/IronFrame.Shared.csproj
+++ b/IronFrame.Shared/IronFrame.Shared.csproj
@@ -56,6 +56,7 @@
     <Compile Include="..\shared\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Messages\FindProcessByIdMessage.cs" />
     <Compile Include="Messaging\AsyncLock.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="Utilities\IProcessRunner.cs" />
