--- a/IronFrame.Host/IronFrame.Host.csproj
+++ b/IronFrame.Host/IronFrame.Host.csproj
@@ -50,6 +50,7 @@
     <Compile Include="..\shared\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Handlers\FindProcessByIdHandler.cs" />
     <Compile Include="Handlers\CreateProcessHandler.cs" />
     <Compile Include="Handlers\PingHandler.cs" />
     <Compile Include="Handlers\StopAllProcessesHandler.cs" />
