Delete DiskQuotas when destroying containers
[#94840506]

Signed-off-by: Dave_Goddard <dgoddard@pivotal.io>

--- a/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
+++ b/IronFrame.Acceptance.Test/IronFrame.Acceptance.Test.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Interop.DiskQuotaTypeLibrary">
+      <HintPath>..\IronFrame\obj\Debug\Interop.DiskQuotaTypeLibrary.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.8.1.0\lib\net45\NSubstitute.dll</HintPath>
     </Reference>
