Introduce DiskQuotaManager to be able to stub in the tests
The introduction of disk quotas caused some tests to fail as
container.Destroy() was trying to remove the quota of a non existing
user.

[Fix #95051518]

--- a/IronFrame/IronFrame.csproj
+++ b/IronFrame/IronFrame.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Utilities\DesktopPermissionManager.cs" />
     <Compile Include="Utilities\EffectiveAccessComputer.cs" />
     <Compile Include="Utilities\FileSystemEffectiveAccessComputer.cs" />
+    <Compile Include="Utilities\DiskQuotaManager.cs" />
     <Compile Include="Utilities\FileSystemManager.cs" />
     <Compile Include="Utilities\FileSystemSecurityDescriptorReader.cs" />
     <Compile Include="Utilities\FirewallManager.cs" />
